Feature/main/timaat#63 optional category sets (#82)
* TIMAAT #63 - Updated endpoints and storage implementation to load assignable categories of entity types

* When entity is not referenced to a category set, all categories can be assigned

* TIMAAT #63 - Added endpoints showing a preview of deleted category assignments after category set change

* Added endpoint to resources of analysis list, medium, actor and music giving a preview of deleted category relations after category set change
* Implemented method inside storages calculating the deleted cateogry relations after category set change

* TIMAAT #63 - Updated process to modify assinged categories and category sets

* When changing category sets, the categories not living inside category set will be removed
* When changing categories, only categories living in current assigned category sets will be added to instance

* TIMAAT #63 - Updated process to modify assinged categories and category sets of actors

* When changing category sets, the categories not living inside category set will be removed
* When changing categories, only categories living in current assigned category sets will be added to instance

* TIMAAT #63 - Updated process to modify assinged categories and category sets of mediums

* When changing category sets, the categories not living inside category set will be removed
* When changing categories, only categories living in current assigned category sets will be added to instance
* Added endpoint to update categories and category sets atomically (according to other entities related to categories and category sets)

* TIMAAT #63 - Implemented new category/category set update procedure

* When updating category sets of category, related categories not part of the set, will be removed
* When an entity is not assigned to any category set after update, it can have categories of any category set
* When updating categories, the categories not part of the assigned category set of the entity will be fi